deploy/k8s-test/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gau-account-api-service
  namespace: gau-${DEPLOY_ENV}-env
  labels:
    app: gau-account-service
spec:
  selector:
    app: gau-account-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: account-service-pgpool-service
  namespace: gau-${DEPLOY_ENV}-env
  labels:
    app: pgpool
spec:
  selector:
    app: pgpool
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: account-service-postgresql-service
  namespace: gau-${DEPLOY_ENV}-env
  labels:
    app: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: account-service-redis-service
  namespace: gau-${DEPLOY_ENV}-env
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
